# led-strip-controller

./: .gitmodules  README.md
firmware/: .gitignore  CMakeLists.txt  README.md
firmware/src/: defs.h  ir.h  ir_receiver.pio  ir_rx.pio  ir_rx.pio.c  main.c  samsung.pio  samsung.pio.c
hardware/board/: led_strip_controller.kicad_pcb  led_strip_controller.kicad_pro  led_strip_controller.kicad_sch
hardware/board/release/: ibom.html  led_strip_controller.step
hardware/board/release/gerbers/: led_strip_controller-B_Cu.gbl  led_strip_controller-B_Mask.gbs  led_strip_controller-B_Paste.gbp  led_strip_controller-B_Silkscreen.gbo  led_strip_controller-Edge_Cuts.gm1  led_strip_controller-F_Cu.gtl  led_strip_controller-F_Mask.gts  led_strip_controller-F_Paste.gtp  led_strip_controller-F_Silkscreen.gto  led_strip_controller-NPTH-drl_map.gbr  led_strip_controller-NPTH.drl  led_strip_controller-PTH-drl_map.gbr  led_strip_controller-PTH.drl
hardware/box/: boxv5.FCStd
hardware/box/release/: v5_base.stl  v5_top.stl
